--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
 server.port = 8090
+
+# Data Shits
+spring.datasource.url=jdbc:mysql://localhost:3306/event
+spring.datasource.username=root
+spring.datasource.password=CyanDroid5277
+
+spring.jpa.hibernate.ddl-auto=create-drop
