--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.thymeleaf.cache=false
 server.port = 8090
 
 # Data Shits
-spring.datasource.url=jdbc:mysql://localhost:3306/event
+spring.datasource.url=jdbc:mysql://192.168.22.155:3306/event
 spring.datasource.username=root
 spring.datasource.password=CyanDroid5277
 
