--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>events</name>
-	<description>Events Attendance</description>
+	<name>EVENTS</name>
+	<description>An attendance and raffle system for AUF Events.</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -45,11 +45,11 @@
 			<artifactId>groovy</artifactId>
 		</dependency>
 
-		<dependency>
+		<!--<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
