--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
 server.port = 8090
 
-# Data Shits
+# Spring Data configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/event
 spring.datasource.username=root
 spring.datasource.password=CyanDroid5277
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
